# macpow

./: Cargo.toml  README.md
benches/: data_sources.rs
examples/: smc_power.rs
linpow/: Cargo.toml  README.md
linpow/etc/: 60-linpow.rules
linpow/src/: app.rs  cpufreq.rs  disk.rs  hwmon.rs  lib.rs  main.rs  metrics.rs  netif.rs  process_utils.rs  procstat.rs  sma.rs  sysfs.rs
src/: app.rs  battery.rs  caps.rs  cf_utils.rs  display.rs  igpu.rs  lib.rs  main.rs  meminfo.rs  metrics.rs  peripherals.rs  powermetrics.rs  rapl.rs  smc.rs
tests/: integration.rs
