[package]
name = "linpow"
version = "0.1.0"
edition = "2021"
description = "Real-time power consumption monitor for Linux ThinkPad X1 (Intel)"
license = "MIT"
keywords = ["linux", "power", "monitor", "tui", "thinkpad"]
categories = ["command-line-utilities", "hardware-support"]
readme = "README.md"

[lib]
name = "linpow"
path = "src/lib.rs"

[[bin]]
name = "linpow"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:ratatui", "dep:crossterm", "dep:clap", "dep:unicode-width"]

[dependencies]
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
unicode-width = { version = "0.2.0", optional = true }
